# mandatory1

./: .gitignore  Library_API_Happy_Path.postman_collection.json  README.md
GRPC/: README.md  pom.xml
GRPC/src/main/java/com/api/grpcmandatory/: BookServiceImpl.java  GrpcMandatoryApplication.java
GRPC/src/main/proto/: books.proto
GRPC/src/main/resources/: application.properties
GRPC/src/test/java/com/api/grpcmandatory/: GrpcMandatoryApplicationTests.java
GraphQL/: README.md  pyproject.toml
GraphQL/app/: main.py
GraphQL/app/schema/: mutation.py  query.py  types.py
GraphQL/app/services/: author_service.py  book_service.py  publisher_service.py
GraphQL/app/utils/: db.py
REST/: README.md  pyproject.toml
REST/app/: main.py  models.py
REST/app/routers/: authors.py  books.py  publishers.py
REST/app/services/: author_service.py  book_service.py  publisher_service.py
SOAP/: .gitignore  README.md  pom.xml
SOAP/src/main/java/entity/: Author.java  Book.java  Publisher.java
SOAP/src/main/java/fault/: ConflictFault.java  NotFoundFault.java  ValidationFault.java
SOAP/src/main/java/service/: AuthorService.java  BookService.java  PublisherService.java
SOAP/src/main/java/ws/: LibraryWebService.java
SOAP/src/main/resources/: application.properties  import.sql
postman-collections/: Library_GraphQL_Happy_Path.postman_collection.json  Library_REST_Happy_Path.postman_collection.json  Library_SOAP_Happy_Path.postman_collection.json  Library_gRPC_Happy_Path.postman_collection.json
