[tool.poetry]
name = "graphql-api"
version = "0.1.0"
description = "GraphQL API"
authors = ["Benjamin Harris <beha1503@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
strawberry-graphql = { extras = ["fastapi"], version = "^0.262.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
