[tool.poetry]
name = "FastAPI-rest"
version = "0.1.0"
description = "A FastAPI managed with Poetry"
authors = ["Benjamin Harris <beha1503@gmail.com>"]
license = ""
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
